--- a/Lab6new/MainWindow.xaml
+++ b/Lab6new/MainWindow.xaml
@@ -1,18 +1,20 @@
 ﻿<Window x:Class="Lab6new.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Каталог співробітників" Height="600" Width="900">
+        Title="Каталог співробітників - LINQ" Height="796" Width="1000">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <GroupBox Grid.Row="0" Grid.Column="0" Header="Додати нового співробітника" Margin="0,0,0,10">
@@ -33,7 +35,7 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="1" Grid.Column="0" Header="Дії" Margin="0,0,0,10">
+        <GroupBox Grid.Row="1" Grid.Column="0" Header="Основні дії" Margin="0,0,0,10">
             <StackPanel Margin="5">
                 <Button x:Name="SortByWorkExperienceButton" Content="Сортувати за стажем" 
                         Click="SortByWorkExperienceButton_Click" Margin="0,2"/>
@@ -46,7 +48,7 @@
                              Text="20000" Margin="0,0,5,0"/>
                     <Button x:Name="FilterButton" Content="Фільтрувати (зарплата &lt;)" 
                             Click="FilterButton_Click" Margin="0,0,5,0"/>
-                    <Button x:Name="ResetFilterButton" Content="Скинути фільтр" 
+                    <Button x:Name="ResetFilterButton" Content="Скинути" 
                             Click="ResetFilterButton_Click"/>
                 </StackPanel>
 
@@ -55,7 +57,39 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="2" Grid.Column="0" Header="Робота з файлами">
+        <GroupBox Grid.Row="2" Grid.Column="0" Header="LINQ Запити" Margin="0,0,0,10">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <StackPanel Margin="5">
+                    <TextBlock Text="Пошук співробітників:" FontWeight="Bold"/>
+                    <TextBox x:Name="SearchTextBox" Margin="0,2,0,5"/>
+                    <Button x:Name="SearchButton" Content="Пошук за ПІБ/посадою" 
+                            Click="SearchButton_Click" Margin="0,2"/>
+
+                    <Separator Margin="0,10" Background="Gray"/>
+
+                    <Button x:Name="ShowUniquePositionsButton" Content="Унікальні посади" 
+                            Click="ShowUniquePositionsButton_Click" Margin="0,5"/>
+
+                    <Button x:Name="ShowTop3BySalaryButton" Content="Топ-3 по зарплаті" 
+                            Click="ShowTop3BySalaryButton_Click" Margin="0,2"/>
+
+                    <Button x:Name="ShowAverageSalaryButton" Content="Середня зарплата" 
+                            Click="ShowAverageSalaryButton_Click" Margin="0,2"/>
+
+                    <Button x:Name="ShowGroupByPositionButton" Content="Групувати за посадою" 
+                            Click="ShowGroupByPositionButton_Click" Margin="0,2"/>
+
+                    <StackPanel Orientation="Horizontal" Margin="0,5">
+                        <TextBox x:Name="ExperienceFilterTextBox" Width="60" 
+                                 Text="3" Margin="0,0,5,0"/>
+                        <Button x:Name="ShowExperiencedButton" Content="Стаж більше" 
+                                Click="ShowExperiencedButton_Click"/>
+                    </StackPanel>
+                </StackPanel>
+            </ScrollViewer>
+        </GroupBox>
+
+        <GroupBox Grid.Row="3" Grid.Column="0" Header="Робота з файлами">
             <StackPanel Margin="5">
                 <Button x:Name="SaveButton" Content="Зберегти каталог" 
                         Click="SaveButton_Click" Margin="0,2"/>
@@ -64,13 +98,29 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" Header="Співробітники">
+        <GroupBox Grid.Row="0" Grid.RowSpan="4" Grid.Column="2" Header="Список співробітників">
             <DataGrid x:Name="EmployeesDataGrid" AutoGenerateColumns="True" 
-                      IsReadOnly="True" SelectionMode="Single"/>
+                      IsReadOnly="True" SelectionMode="Single"
+                      ScrollViewer.VerticalScrollBarVisibility="Auto"/>
         </GroupBox>
 
-        <StatusBar Grid.Row="3" Grid.ColumnSpan="3">
-            <TextBlock x:Name="StatusText" Text="Готово"/>
+        <GroupBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Header="Результати запитів" Margin="0,10,0,0">
+            <TextBox x:Name="ResultsTextBox" 
+                     IsReadOnly="True" 
+                     VerticalScrollBarVisibility="Auto" 
+                     HorizontalScrollBarVisibility="Auto"
+                     TextWrapping="Wrap"
+                     FontFamily="Consolas"
+                     Background="LightYellow"
+                     BorderThickness="0">
+                <TextBox.Text>
+                    Запити
+                </TextBox.Text>
+            </TextBox>
+        </GroupBox>
+
+        <StatusBar Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Background="LightBlue">
+            <TextBlock x:Name="StatusText" Text="Готово" FontWeight="Bold"/>
         </StatusBar>
     </Grid>
 </Window>
